[package]
name = "mpc-dummy"
version = "0.1.0"
edition = "2024"

[dependencies]
iris-mpc-cpu = { git = "https://github.com/worldcoin/iris-mpc.git"}
iris-mpc-common = { git = "https://github.com/worldcoin/iris-mpc.git"}
tokio-util = "0.7.16"
tokio = { version = "1.36.0", features = ["full"] }
eyre = "0.6"
itertools = "0.14.0"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
