[package]
name = "vector-mpc-poc"
version = "0.1.0"
edition = "2024"

[dependencies]
iris-mpc-cpu = { git = "https://github.com/worldcoin/iris-mpc.git", features = ["chacha_prf"] }
iris-mpc-common = { git = "https://github.com/worldcoin/iris-mpc.git" }
tokio-util = "0.7.16"
tokio = { version = "1.36.0", features = ["full"] }
eyre = "0.6"
itertools = "0.14.0"
rand = "0.8"
rayon = "1.11"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
num_cpus = "1.17.0"
deadpool = "0.12.3"
hdrhistogram = "7.5"

# [profile.release]
# opt-level = 3
# lto = "fat"

[profile.profiling]
inherits = "release"
debug = true
